# owned

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
owned/: __init__.py
