[metadata]
name = owned
version = 0.0.3
url = https://github.com/thorwhalen/owned
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = A little tool to manage secrets
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = owned

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    web3
    owner

